[package]
name = "patch-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ab_glyph = "0.2.26"
env_logger = "0.11.3"
faer = "0.19.1"
glob = "0.3.1"
image = "0.25.0"
imageproc = "0.25.0"
nalgebra = { version = "0.33.0", features = ["rand"] }
piston_window = "0.132.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.10.0"
show-image = { version = "0.14.0", features = ["image"] }

[[example]]
name = "single_camera"
path = "examples/single_camera.rs"

[lib]
name = "patch_tracker"