[package]
name = "patch-tracker"
version = "0.1.2"
edition = "2021"
authors = ["Powei Lin <poweilin1994@gmail.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "Patch tracker"
homepage = "https://github.com/powei-lin/patch-tracker-rs"
repository = "https://github.com/powei-lin/patch-tracker-rs"
keywords = ["opticalflow"]
categories = ["science", "mathematics"]
exclude = [
    "docs/*.avif",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.5"
image = "0.25.0"
imageproc = "0.25.0"
log = "0.4.22"
nalgebra = "0.33.0"
rayon = "1.10.0"

[dev-dependencies]
ab_glyph = "0.2.29"
glob = "0.3.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
show-image = { version = "0.14.0", features = ["image"] }
clap = { version = "4.5.19", features = ["derive"] }


[[example]]
name = "single_camera"
path = "examples/single_camera.rs"

[lib]
name = "patch_tracker"
