[package]
name = "patch-tracker"
version = "0.2.1"
edition = "2021"
authors = ["Powei Lin <poweilin1994@gmail.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "Patch tracker"
homepage = "https://github.com/powei-lin/patch-tracker-rs"
repository = "https://github.com/powei-lin/patch-tracker-rs"
keywords = ["opticalflow"]
categories = ["science", "mathematics"]
exclude = [
    "docs/*.avif",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25"
imageproc = "0.26"
log = "0.4.22"
nalgebra = "0.33.0"
rayon = "1.10.0"

[dev-dependencies]
env_logger = "0.11"
glob = "0.3.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
clap = { version = "4.6", features = ["derive"] }
rerun = "0.30.2"
diol = "0.13.1"


[[example]]
name = "single_camera"
path = "examples/single_camera.rs"

[[example]]
name = "stereo_camera"
path = "examples/stereo_camera.rs"

[[bench]]
name = "image_pyramid"
harness = false

[lib]
name = "patch_tracker"
